# perceptron-playground

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
data/: train_config.json  train_design.csv  train_pairs.csv
scripts/: make_noisy_copy.py  make_toy_clean_dataset.py  plot_entity_resolution.py  run_entity_resolution_demo.sh  run_linkage_perceptron.py  run_perceptron.py  train_and_run_iris_perceptron.py  train_linkage_perceptron.py
src/data_prep/: create_linkage_features.py  levenshtein.py  noise_imputer.py  sampling.py
src/perceptron/: perceptron_class.py  training_utils.py
src/viz/: plot.py
