[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "perceptron-playground"
version = "0.1.1"
description = "Perceptron experiments: single-layer now, multi-layer later. Includes plotting on the Iris dataset."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "grthomson" }]
license = { file = "LICENSE" }
keywords = ["perceptron", "machine-learning", "neural-networks", "classifier"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

# Safer ranges: allow bugfix updates, avoid silent jumps to next major
dependencies = [
  "numpy~=1.23",
  "pandas~=1.5",
  "matplotlib~=3.7",
  "scikit-learn~=1.3",
]

[project.optional-dependencies]
dev = [
  "pytest~=7.0",
  "pytest-cov~=4.0",
  "pre-commit~=3.5",
  "black~=24.0",
  "ruff~=0.5",
  "mypy~=1.7"
]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
addopts = "-q --cov=src --cov-report=term-missing"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
disallow_untyped_defs = false
